# idb1_encoder_decoder

./: README.md  TODO  idb1.py  idb1_constructs.py  pyproject.toml  requirements.txt  run_generator.sh  run_reader.sh
example_certs/: secret.der
examples/: barcode_1.txt  barcode_2.txt  barcode_3.txt  barcode_4.txt  barcode_5.txt  barcode_photo.txt  barcode_signed.txt  barcode_vds.txt  photo.avif
examples/cert/: public.der
src/idb1/: __init__.py  construct_helpers.py  generator_gui.py  gui.py  parser.py  reader_gui.py
