[build-system]
requires = ["setuptools"] 
build-backend = "setuptools.build_meta"

[project]
name = "idb1_encoder_decoder"
version = "0.0.1"
description = "A simple Encoder/Decoder for ICAO Datastructure for Barcode"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
  "construct>=2.10.70"
]

[project.scripts]
idb1 = "idb1:main"