[build-system]
requires = ["setuptools>=72.1.0"] 
build-backend = "setuptools.build_meta"

[project]
name = "idb1_encoder_decoder"
version = "0.0.2"
description = "A simple Encoder/Decoder for ICAO Datastructure for Barcode"
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
  "construct>=2.10.70",
  "ecdsa>=0.19.0"
]

[project.scripts]
idb1 = "idb1:main"